--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,21 @@
 	    <groupId>com.googlecode.json-simple</groupId>
 	    <artifactId>json-simple</artifactId>
 	    <version>1.1.1</version>
-	</dependency>			
+	</dependency>	
+
+	<dependency>
+	    <groupId>info.cukes</groupId>
+	    <artifactId>cucumber-java</artifactId>
+	    <version>1.2.5</version>
+<!--  <type>pom</type> -->	    
+	</dependency>
+	
+ 	<dependency>
+	    <groupId>info.cukes</groupId>
+	    <artifactId>cucumber-junit</artifactId>
+	    <version>1.2.5</version>
+<!--  <type>pom</type> -->	    
+	</dependency>		
+	 
   </dependencies>
 </project>
